# libgmem

./: .gitignore  404.html  Copyright  Makefile  Makefile.am  NEWS  README.en.md  README.md  README_CN.md  autogen.sh  configure.ac  index.html  mkdocs.yml  sitemap.xml
docs/: README.md
include/: gmem_common.h  libgmem.h
m4/: attributes.m4
scripts/: install_npu_driver.sh
search/: search_index.json
src/: init.c  libgmem.c  malloc.c
src/ascend/: gmem_ascend.c  gmem_ascend.h
